--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 22 11:57:48 CST 2017
-ndk.dir=/Users/liuzhao/Downloads/adt-bundle-mac-x86_64-20140702/sdk/ndk-bundle
-sdk.dir=/Users/liuzhao/Downloads/adt-bundle-mac-x86_64-20140702/sdk
+#Tue Jul 31 21:34:59 CST 2018
+ndk.dir=/Users/liuzhao.futrue/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/liuzhao.futrue/Library/Android/sdk
